--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: admission-controller
+  namespace: kube-public
   labels:
     name: admission-controller
 spec:
@@ -35,6 +36,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: admission-controller
+  namespace: kube-public
 spec:
   selector:
     app: admission-controller
